--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     </section>
     <section>
     	<h1>section 4</h1>
+        <p>asd</p>
     </section>
     <script src="assets/scripts/main.js"></script>
   </body>
