--- a/index.html
+++ b/index.html
@@ -14,10 +14,14 @@
     </section>
     <section>
     	<h1>section 3</h1>
+        <p id="hank">hanktest</p>
+        <span>hanktest</span>
+        <canvas></canvas>
     </section>
     <section>
     	<h1>section 4</h1>
         <p>asd</p>
+        <div class="hanktest">hanktest gogogo</div>
     </section>
     <script src="assets/scripts/main.js"></script>
   </body>
