--- a/index.html
+++ b/index.html
@@ -4,6 +4,20 @@
     <meta charset="UTF-8"/>
     <title>Document</title>
     <link rel="stylesheet" href="assets/styles/main.css"/>
+    <style>
+        section{
+            width: 100%;
+            height: 300px;
+            background:#f96;
+        }
+
+        .colored{
+            width: 100px;
+            height: 100px;
+            background:#069;
+            border-radius:50%;
+        }
+    </style>
   </head>
   <body>
     <section>
@@ -11,6 +25,8 @@
     </section>
     <section>
     	<h1>section 2</h1>
+        <p>hello yen</p>
+
     </section>
     <section>
     	<h1>section 3</h1>
@@ -18,6 +34,7 @@
     <section>
     	<h1>section 4</h1>
         <p>asd</p>
+        <div class="colored"></div>
     </section>
     <script src="assets/scripts/main.js"></script>
   </body>
