--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
   <body>
     <section>
     	<h1>section 1</h1>
+        <p>hahahahahhaha</p>
+        <p>WTF</p>
     </section>
     <section>
     	<h1>section 2</h1>
@@ -18,6 +20,8 @@
     <section>
     	<h1>section 4</h1>
         <p>asd</p>
+        <p>ohhhhh yaaaaaaa</p>
+        <div><a href=""><p>yaaa</p></a></div>
     </section>
     <script src="assets/scripts/main.js"></script>
   </body>
