--- a/index.html
+++ b/index.html
@@ -15,7 +15,6 @@
             width: 100px;
             height: 100px;
             background:#069;
-            border-radius:50%;
         }
     </style>
   </head>
@@ -24,10 +23,11 @@
     	<h1>section 1</h1>
         <p>hahahahahhaha</p>
         <p>WTF</p>
+        <p>WTF</p>
     </section>
     <section>
     	<h1>section 2</h1>
-        <p>hello yen</p>
+        <p>hello yyyyen</p>
         <p>yyyyyyyyyyyyyy</p>
 
     </section>
